fix animation with overflow-x hidden

--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -194,10 +194,13 @@ textarea {
 
 // hack to fix scollbar appearing due to sliding framer-motion animation
 /* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
-}
-/* Hide scrollbar for IE and Edge */
+// body::-webkit-scrollbar {
+//   display: none;
+// }
+// /* Hide scrollbar for IE and Edge */
+// body {
+//   -ms-overflow-style: none;
+// }
 body {
-  -ms-overflow-style: none;
+  overflow-x: hidden;
 }
